# cs2-gsi

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  README.md  README.zh-CN.md
.github/workflows/: ci.yml
examples/: full_dump.rs  quickstart.rs
fixtures/: sample_live_round.json
src/: cfg.rs  dispatcher.rs  error.rs  events.rs  handlers.rs  lib.rs  listener.rs  steam.rs
src/model/: auth.rs  bomb.rs  grenade.rs  helpers.rs  map.rs  mod.rs  player.rs  provider.rs  round.rs  tournament.rs
tests/: integration.rs
